--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,13 @@
     "start-server": "nodemon ./server.js"
   },
   "dependencies": {
+    "@material-ui/core": "^4.3.1",
+    "@material-ui/icons": "^4.2.1",
+    "body-parser": "^1.18.3",
     "express": "^4.17.1",
     "mongoose": "5.6.8",
-    "body-parser": "^1.18.3"
+    "react-redux": "^7.1.0",
+    "redux-saga": "^1.0.5"
   },
   "devDependencies": {
     "nodemon": "1.19.1"
