--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "@material-ui/core": "^4.3.1",
+    "@material-ui/icons": "^4.2.1",
+    "react-redux": "^7.1.0",
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,8 +33,8 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
-    "eslint": "5.16.0",
+    "babel-eslint": "10.0.2",
+    "eslint": "6.1.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.18.0",
