--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,15 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.17.1",
-    "mongoose": "5.6.8"
+    "mongoose": "5.6.8",
+    "cookie-parser": "1.4.4",
+    "express-session": "1.16.2",
+    "cookie-session": "1.3.3"
   },
   "devDependencies": {
-    "nodemon": "1.19.1"
+    "nodemon": "1.19.1",
+    "passport": "^0.4.0",
+    "passport-local": "1.0.0",
+    "bcrypt": "3.0.6"
   }
 }
