--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -1,10 +1,11 @@
 {
   "extends": [
-    "airbnb",
+    "eslint-config-airbnb",
     "prettier",
     "prettier/react"
   ],
   "rules": {
+    "class-methods-use-this": "off",
     "react/jsx-filename-extension": [
       1,
       {
