--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,10 @@
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "react-redux": "^7.1.0",
-    "redux-saga": "^1.0.5"
+    "redux-saga": "^1.0.5",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "axios": "^0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
