--- a/front/package.json
+++ b/front/package.json
@@ -43,5 +43,6 @@
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-jest": "22.7.2",
     "eslint-plugin-react": "7.14.2"
-  }
+  },
+  "proxy": "http://localhost:8080/"
 }
