--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -6,6 +6,7 @@
   ],
   "rules": {
     "class-methods-use-this": "off",
+    "react/prop-types": "off",
     "react/jsx-filename-extension": [
       1,
       {
