--- a/front/package.json
+++ b/front/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0",
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
+    "axios": "^0.19.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
-    "redux-saga": "^1.0.5",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "axios": "^0.19.0"
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
