--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
+    "connected-react-router": "^6.5.2",
     "formik": "^1.5.8",
+    "history": "^4.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
