--- a/front/package.json
+++ b/front/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.3.1",
-    "@material-ui/icons": "^4.2.1",
+    "antd": "^3.21.4",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
     "formik": "^1.5.8",
