--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "3.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.5"
+    "redux-saga": "^1.0.5",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
