--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "connected-react-router": "^6.5.2",
     "formik": "^1.5.8",
     "history": "^4.9.0",
+    "rc-tween-one": "^2.5.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
