--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -7,6 +7,7 @@
   "rules": {
     "class-methods-use-this": "off",
     "react/prop-types": "off",
+    "import/no-unresolved": "off",
     "react/jsx-filename-extension": [
       1,
       {
