--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-saga/core": "^1.0.3",
     "antd": "^3.21.4",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
@@ -17,6 +18,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.0.5",
+    "sinon": "^7.4.1",
     "yup": "^0.27.0"
   },
   "scripts": {
