--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ server/node_modules
 server/package-lock.json
 front/node_modules
 front/package-lock.json
+new-front/package-lock.json
 
 # testing
 /coverage
