--- a/new-front/.eslintrc
+++ b/new-front/.eslintrc
@@ -8,6 +8,7 @@
     "class-methods-use-this": "off",
     "react/prop-types": "off",
     "import/no-unresolved": "off",
+    "import/prefer-default-export": "off",
     "react/jsx-filename-extension": [
       1,
       {
