--- a/new-front/package.json
+++ b/new-front/package.json
@@ -16,7 +16,8 @@
     "connected-react-router": "^6.5.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "history": "^4.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
