--- a/new-front/package.json
+++ b/new-front/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.0",
+    "@material-ui/icons": "^4.5.1",
+    "@redux-saga/core": "^1.1.1",
+    "axios": "^0.19.0",
+    "connected-react-router": "^6.5.2",
+    "final-form": "^4.18.5",
+    "history": "^4.10.1",
+    "ramda": "^0.26.1 ",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "ramda": "^0.26.1 ",
     "react-final-form": "^6.3.0",
-    "final-form": "^4.18.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.1",
-    "axios": "^0.19.0",
-    "@redux-saga/core": "^1.1.1",
-    "connected-react-router": "^6.5.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "history": "^4.10.1"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.1",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
