--- a/new-front/package.json
+++ b/new-front/package.json
@@ -49,6 +49,7 @@
     "eslint": "6.1.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "6.0.0",
+    "prettier": "^1.19.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-jest": "22.7.2",
     "eslint-plugin-react": "7.16.0"
